// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> should match the snapshot when empty 1`] = `
<textarea
  className="sc-bdVaJa iJahjm"
/>
`;

exports[`<Textarea /> should match the snapshot when not empty 1`] = `
<textarea
  className="sc-bdVaJa iJahjm"
  value="Short description"
/>
`;
